feat: cv completed

--- a/cv/index.html
+++ b/cv/index.html
@@ -8,22 +8,76 @@
   </head>
   <body>
     <!-- Header -->
-    <header></header>
+    <header class="header">
+      <img src="./img/unknown-man-150x150.jpg" alt="Avatar image" />
+      <h1>Pallino Pinco - Web Developer</h1>
+    </header>
     <!-- /Header -->
 
     <main>
       <!-- Experience section -->
+      <section>
+        <h2 class="section-title">Experience</h2>
+
+        <div>
+          <h3 class="section-subtitle">Evil Corp 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui rem
+            repellendus ducimus! Animi sequi in, adipisci qui numquam modi nobis
+            maxime soluta quidem voluptatibus aperiam dicta eaque. Hic,
+            laboriosam ipsum?
+          </p>
+        </div>
+
+        <div>
+          <h3 class="section-subtitle">Evil Corp 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui rem
+            repellendus ducimus! Animi sequi in, adipisci qui numquam modi nobis
+            maxime soluta quidem voluptatibus aperiam dicta eaque. Hic,
+            laboriosam ipsum?
+          </p>
+        </div>
+      </section>
       <!-- /Experience section -->
 
       <!-- Education section -->
+      <section>
+        <h2 class="section-title">Education</h2>
+
+        <div>
+          <h3 class="section-subtitle">Univercity of life</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui rem
+            repellendus ducimus! Animi sequi in, adipisci qui numquam modi nobis
+            maxime soluta quidem voluptatibus aperiam dicta eaque. Hic,
+            laboriosam ipsum?
+          </p>
+        </div>
+      </section>
       <!-- /Education section -->
 
       <!-- Interests section -->
+      <section>
+        <h2 class="section-title">Interests</h2>
+
+        <div>
+          <h3 class="section-subtitle">Coding</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui rem
+            repellendus ducimus! Animi sequi in, adipisci qui numquam modi nobis
+            maxime soluta quidem voluptatibus aperiam dicta eaque. Hic,
+            laboriosam ipsum?
+          </p>
+        </div>
+      </section>
       <!-- /Interests section -->
     </main>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer class="footer">
+      <p>Made with &hearts; by Boolean Careers</p>
+    </footer>
     <!-- /Footer -->
   </body>
 </html>
